# azure-nextflow

./: .gitignore  LICENSE  README.md
.devops/pipelines/: azure-functions.yml  azure-templates.yml  cicd.yml  docker-images.yml
.github/workflows/: azure-functions-OLD.yml  azure-functions.yml  azure-templates.yml  cicd.yml  docker-images-nextflow.yml  docker-images-nxfutil.yml  docker-images-ubuntu.yml  docker-images.yml  reusable-azure-functions.yml  reusable-azure-templates.yml  reusable-docker-images-nextflow.yml  reusable-docker-images-nxfutil.yml  reusable-docker-images-ubuntu.yml  run-azure-functions.yml  run-azure-templates.yml  run-docker-images-nextflow.yml  run-docker-images-nxfutil.yml  run-docker-images-ubuntu.yml  rust-binary-handler.yml  rust-binary-nxfutil.yml  rust-binary-nxfutild.yml
.github/workflows/reusable/: azure-functions.yml  docker-images-nextflow.yml  docker-images-nxfutil.yml
azure/functions/python/: README.md  requirements.txt
azure/functions/python/nxfutil/: __init__.py
azure/functions/rust/: .funcignore  Cargo.toml  Makefile  README.md
azure/functions/rust/nxfutil/: function.json
azure/functions/rust/nxfutil_dispatch/: function.json
azure/functions/rust/nxfutil_status/: function.json
azure/functions/rust/nxfutil_terminate/: function.json
azure/functions/rust/src/: main.rs
azure/functions/rust/src/app/: app.rs  mod.rs  router.rs  secrets.rs  server.rs  state.rs  variables.rs
azure/functions/rust/src/models/: api.rs  mod.rs  nextflow_message.rs
azure/functions/rust/src/routes/: dispatch.rs  mod.rs  root.rs  status.rs  terminate.rs
azure/functions/rust/src/services/: auth.rs  az-identity.rs  az-storage-queues.rs  az_storage_queues.rs  mod.rs
azure/functions/rust/src/services-raw/: az-mgmt-containerinstance.rs
azure/functions/rust/src/services_raw/: az_mgmt_containerinstance.rs
azure/functions/rust/test/: azure.http  local.http
azure/templates/: main.bicep  main.json
azure/templates/resourceGroups/batch/: batchAccount.bicep  containerApp.bicep  containerAppWrapper.bicep  containerRegistry.bicep  functionApp.bicep  keyVault.bicep  managedIdentity.bicep  permissions.bicep  storageAccount.bicep
doc/: AzureInfrastructure.md  DataUpload.md
docker/images/: README.md  build.sh  login.sh  push.sh
docker/images/nextflow/: Dockerfile  Makefile
docker/images/nxfutil/: Dockerfile  Makefile
docker/images/ubuntu/: Dockerfile  Makefile
docs/: Authentication.md  AzureInfrastructure.md  DataUpload.md  DevOpsPipelines.md  GitHubSecrets.md  ManualSetup.md  nxfutil.md
nextflow/pipelines/: nextflow.config
nextflow/pipelines/helloComplexParallel/: parameters.json  pipeline.nf
nextflow/pipelines/helloFileShare/: pipeline.nf  script.sh
nextflow/pipelines/helloParalell/: pipeline.nf
nextflow/pipelines/helloParallel/: parameters.json  pipeline.nf
nextflow/pipelines/helloPrerequisites/: pipeline.nf
nextflow/pipelines/helloWorld/: parameters.json  pipeline.nf
nxfutil/python/: nxfutil  nxfutil.py
nxfutil/rust/nxfutil/: Cargo.toml  README.md  nextflow.config  parameters.json  pipeline.nf
nxfutil/rust/nxfutil/src/: args.rs  main.rs
nxfutil/rust/nxfutil/src/app/: config-parser.rs  config_parser.rs  mod.rs  secrets.rs  server.rs  variables.rs
nxfutil/rust/nxfutil/src/models/: mod.rs  nextflow_message.rs
nxfutil/rust/nxfutil/src/services/: az-identity.rs  az-security-keyvault.rs  az_storage_queues.rs  mod.rs  weblog.rs
nxfutil/rust/nxfutil/src/services_raw/: az_mgmt_containerinstance.rs  mod.rs
nxfutil/rust/nxfutild/: Cargo.toml  README.md
nxfutil/rust/nxfutild/src/: main.rs
nxfutil/rust/nxfutild/src/app/: mod.rs  router.rs  secrets.rs  server.rs  state.rs  variables.rs
nxfutil/rust/nxfutild/src/models/: api.rs
nxfutil/rust/nxfutild/src/routes/: root.rs
nxfutil/rust/nxfutild/src/services/: az-identity.rs  az-storage-queues.rs  az_storage_queues.rs
nxfutil/rust/nxfutild/test/: api.http
