[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum            = "0.6.0"
chrono          = "0.4.23"
serde           = { version = "1", features = ["derive", "std", "serde_derive"] }
serde_json      = "1.0.91"
strum           = "0.24.1"
strum_macros    = "0.24.3"
tokio           = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
uuid            = "1.2.2"
tower-http      = { version = "0.4", default-features = false, features = ["cors"]}
http            = { version = "0.2" }

az_app_identity     = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }
az_app_variables    = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }
az_app_secrets      = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }

azure_core                      = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_identity                  = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_security_keyvault         = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_storage                   = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_storage_queues            = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_mgmt_resources            = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_mgmt_containerinstance    = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }

