[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web       = { version = "4" }
actix-cors      = { version = "0.6" }
actix-web-grants = { version = "3.0" }
base64-url      = { version = "2.0" }
serde           = { version = "1", features = ["derive", "std", "serde_derive"] }
serde_json      = { version = "1" }
chrono          = { version = "0.4" }
uuid            = { version = "1.2" }
strum           = { version = "0.24" }
strum_macros    = { version = "0.24" }

az_app_identity     = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }
az_app_variables    = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }

azure_storage                   = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_storage_queues            = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_mgmt_resources            = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_mgmt_containerinstance    = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
