[package]
name = "nxfutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }

azure_core                      = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_identity                  = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_security_keyvault         = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_storage                   = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_storage_queues            = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
serde_json = "1.0.93"
