[package]
name = "nxfutild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
chrono = "0.4.23"
serde = { version = "1", features = ["derive", "std", "serde_derive"] }
serde_json = "1.0.91"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

azure_core                      = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_identity                  = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_security_keyvault         = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_storage                   = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
azure_storage_queues            = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }