[package]
name = "nxfutild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = { version = "4" }
serde       = { version = "1", features = ["derive", "std", "serde_derive"] }
serde_json  = { version = "1" }

az_app_identity     = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }
az_app_variables    = { version = "0.1", git = "https://github.com/axgonz/rust-crates", tag = "0.1.1" }

azure_storage           = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
azure_storage_queues    = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }